--- a/Task-3.html
+++ b/Task-3.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <script>
+
+      // using function  and loops
+
       const initGame = () => {
         const startGame = confirm("Shall we play rock, paper, or scissors?");
         startGame ? playGame() : alert("Ok, maybe next time.");
